# labweave

./: .gitignore  CLAUDE.md  README.md
backend/: .env.example  AUTOMATED_TESTING.md  DOCUMENTATION_MANAGEMENT.md  Makefile  alembic.ini  automated_fix.py  doc_config.json  doc_manager.py  doc_manager_advanced.py  doc_manager_summary.md  manual_test.py  preflight_check.py  pyproject.toml  requirements-minimal.txt  requirements-optional.txt  requirements-simple.txt  requirements.txt  setup-dev.sh  smart_start.py  test_api_debug.py  test_endpoints.py  test_server.py  test_setup.py  test_simple.py
backend/alembic/: env.py
backend/alembic/versions/: 02945996ce3d_add_document_versioning_support.py
backend/src/: config.py  main.py
backend/src/api/v1/: api.py
backend/src/api/v1/endpoints/: auth.py  documents.py  documents_noauth.py  experiments.py  health.py  knowledge_graph.py  projects.py  protocols.py  samples.py  simple_documents.py  test.py  users.py
backend/src/core/: security.py
backend/src/db/: base.py  neo4j.py  session.py
backend/src/knowledge_graph/: __init__.py  models.py  service.py
backend/src/models/: __init__.py  base.py  document.py  experiment.py  project.py  protocol.py  sample.py  user.py
backend/src/schemas/: document.py  experiment.py  project.py  protocol.py  sample.py  user.py
backend/tests/: conftest.py  test_auth.py  test_document_versioning.py  test_knowledge_graph.py  test_main.py  test_startup.py  test_users.py
frontend/: .env.example  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
future-ideas/: mobile-field-work.md
instructions/: api-design.md  automated-development-quick-ref.md  development-setup-guide.md  labweave-overview.md  mvp-plan.md  (+4 more)
(+17 files in other folders)
